# electronic-store

./: CMakeLists.txt  electronic_store.db  products.db
sql/: data-l.sql  data-p.sql
src/: database.c  database.h  main.c  main.h
src/database-product/: database-prod.h
src/windows/: admin-w.c  admin-window.c  admin.h  login-w.c  login-window.c  login.h  main-w.c  main-window.c  main.h
src/windows/database-product/: database-prod.c
src/windows/databasel/: databasel.c  databasel.h  products-data.c  products-data.h
src/windows/headers/: admin-w.h  login-w.h  main-w.h
